# Rocon-Biped-Genesis

./: DOMAIN_RANDOMIZATION_README.md  FOOT_CONTACT_DOMAIN_RANDOMIZATION.md  IMPLEMENTATION_COMPLETE.md  INFERENCE_KEYBOARD_CONTROL.md  MOTOR_BACKLASH_SENSOR_NOISE.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  README.md  README_ROS2.md  README_modular.md  READY_TO_USE_GUIDE.md  WANDB_IMPLEMENTATION_SUMMARY.md  biped_env.py  biped_env_main.py  biped_inference.py  biped_train.py  domain_randomization.py  example.py  force_contact.py  genesis_world.py  genesislaunch.py  imu.py  keyboard_test.py  ppo_metrics_wrapper.py  reward_functions.py  simple_test.py  test_policy.py  wandb_integration.py  wandb_requirements.txt
config/: biped_inference_params.yaml
logs/biped-walking/: cfgs.pkl  events.out.tfevents.1754594351.sam.568617.0
resource/: biped_inference
ros files/: biped_policy_inference.py  biped_ros_inference.py  package.xml
ros files/launch/: biped_inference.launch.py
training/: biped_env.py  biped_eval.py  biped_train.py  wandb_logger.py
urdf/: biped_v4.urdf
urdf/meshes/: cfpipebase1.STL  cfpipebase2.STL  fix_femur1_3.STL  fix_femur1_4.STL  fix_left_femur2_2.STL  fix_left_femur2_3.STL  fix_leftfemur1_2.STL  fix_lefthip1motorbody.STL  fix_lefthip1towaist.STL  fix_leftlegtobaselink.STL  fix_lefttibia_1.STL  fix_lefttibia_2.STL  fix_lefttibia_3.STL  fix_lefttibia_4.STL  fix_lefttibia_5.STL  fix_lefttibia_6.STL  fix_right_femer1_2.STL  fix_right_femur2_2.STL  fix_right_femur2_3.STL  fix_right_hip1motorbody.STL  fix_rightfemer1_3.STL  fix_rightfemer1_4.STL  (+20 more)
